unified loading image placeholder added some responsive layout  fixed some responsive layout problems tag some todos strip some useless css

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ Tags: 樱花庄的白猫
 
 :root {
     --theme-main-color: #8F8;
+    --image-placeholder: url(https://cdn.jsdelivr.net/gh/moezx/cdn@3.0.1/img/svg/loader/orange.progress-bar-stripe-loader.svg);
 }
 
 #content {
@@ -776,8 +777,9 @@ a:hover {
     background-size: cover;
     background-position: center center;
     background-origin: border-box;
+    background-image: var(--image-placeholder);
     width: 100%;
-    height: 400px
+    height: 100%;
 }
 
 .pattern-center header.pattern-header {
@@ -854,9 +856,9 @@ a:hover {
         padding: 0 4%
     }
 
-    .pattern-attachment-img {
+    /* .pattern-attachment-img {
         height: 280px
-    }
+    } */
 
     .pattern-center h1.cat-title,
     .pattern-center h1.entry-title,
@@ -901,15 +903,6 @@ a:hover {
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, .3)
-}
-
-.pattern-attachment-img {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-origin: border-box;
-    width: 100%;
-    height: 400px
 }
 
 .pattern-center-sakura header.pattern-header {
@@ -986,9 +979,9 @@ a:hover {
         padding: 0 4%
     }
 
-    .pattern-attachment-img {
+    /* .pattern-attachment-img {
         height: 280px
-    }
+    } */
 
     .pattern-center-sakura h1.cat-title,
     .pattern-center-sakura h1.entry-title,
@@ -1314,7 +1307,7 @@ a:hover {
 
 .site-content {
     max-width: var(--main-body-width);
-    padding: 0 10px;
+    padding: 0 min(40px, 4%);
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(255, 255, 255, .8)
@@ -1783,7 +1776,7 @@ body.dark .s-content {
 .site-footer {
     padding: 2%;
     background: rgba(255, 255, 255, .8);
-    max-width: 800px;
+    max-width: var(--main-body-width);
     margin-left: auto;
     margin-right: auto
 }
@@ -2087,7 +2080,7 @@ h1.page-title.mb- {
 .post-squares {
     overflow: hidden;
     width: 100%;
-    margin: 55px 0;
+    margin: 55px auto;
     background: #000
 }
 
@@ -2096,10 +2089,11 @@ h1.page-title.mb- {
     z-index: 50;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     opacity: .4;
-    background-size: cover;
+    /* background-size: cover; */
+    object-fit: cover;
     -webkit-transition: opacity .15s ease-out;
     -moz-transition: opacity .15s ease-out;
     transition: opacity .15s ease-out
@@ -3185,22 +3179,9 @@ a.page-numbers {
 
 @media (max-width:1080px) {
     .comments {
-        padding: 6.39% 0 0;
         padding-bottom: 80px;
         max-width: 100%;
         padding: 0 10px;
-        max-width: 800px;
-        margin-left: auto;
-        margin-right: auto
-    }
-}
-
-@media (max-width:860px) {
-    .comments {
-        padding: 6.39% 0 0;
-        max-width: 100%;
-        padding: 0 10px;
-        max-width: 800px;
         margin-left: auto;
         margin-right: auto
     }
@@ -4219,7 +4200,12 @@ i.iconfont.js-toggle-search.iconsearch {
     cursor: pointer;
     font-size: 26px;
     -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out
+    transition: all .3s ease-in-out;
+    text-shadow:
+    -1px -1px 0 #fff,  
+     1px -1px 0 #fff,
+    -1px  1px 0 #fff,
+     1px  1px 0 #fff;
 }
 
 .search-form--modal {
@@ -4262,7 +4248,7 @@ i.iconfont.js-toggle-search.iconsearch {
     visibility: visible;
     opacity: .99;
     animation: elastic .5s;
-    background-image: url(https://cdn.jsdelivr.net/gh/moezx/cdn@3.2.1/img/other/iloli.gif);
+    /* background-image: url(https://cdn.jsdelivr.net/gh/moezx/cdn@3.2.1/img/other/iloli.gif); */
     background-repeat: no-repeat;
     background-position: bottom right
 }
@@ -5181,18 +5167,18 @@ i.iconfont.down {
 }
 
 @media (max-width:860px) {
-    .comments {
+    /* .comments {
         max-width: 100% !important
-    }
+    } */
 
     /* .top-feature,
     .top-feature-row {
         display: none
     } */
 
-    .site-content {
+    /* .site-content {
         padding: 0 4%
-    }
+    } */
 
     /* .feature img {
         width: 52px;
@@ -5388,9 +5374,9 @@ i.iconfont.down {
         width: 250px
     }
 
-    .wrapper section {
+    /* .wrapper section {
         max-width: 600px
-    }
+    } */
 
     .wrapper section h1 {
         font-weight: 300;
